# signal

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  mkdocs.yml  pyproject.toml
docs/: index.md  roadmap.md
docs/api/: agents.md  ai.md  cli.md  comms.md  core.md  heartbeat.md  hooks.md  index.md  memory.md  prompts.md  runtime.md  security.md  sessions.md  tools.md  worktrees.md
docs/dev/: architecture.md  contributing.md  project-structure.md  roadmap.md  testing.md
docs/developer-guide/: architecture.md  contributing.md  error-handling.md  extending-agents.md  extending-hooks.md  extending-tools.md  project-structure.md  testing.md
docs/getting-started/: first-profile.md  installation.md  quickstart.md
docs/superpowers/plans/: 2026-03-31-phase1-skeleton.md  2026-03-31-phase4a-tool-execution.md  2026-03-31-phase4b-hooks.md  2026-03-31-phase4c-sub-agents.md  2026-04-01-phase5-prompt-construction.md  2026-04-02-phase6-sessions.md  2026-04-02-phase7-heartbeat-daemon.md  2026-04-02-phase8a-worktrees.md  2026-04-02-phase8b-forks.md  2026-04-03-phase10a-policy-audit.md  2026-04-03-phase10b-docker-packaging.md
docs/superpowers/specs/: 2026-03-31-phase4a-tool-execution-design.md  2026-03-31-phase4b-hooks-design.md  2026-03-31-phase4c-sub-agents-design.md  2026-03-31-signal-implementation-design.md  2026-04-01-phase5-prompt-construction-design.md  2026-04-02-phase6-sessions-design.md  2026-04-02-phase7-heartbeat-daemon-design.md  2026-04-02-phase8a-worktrees-design.md  2026-04-02-phase8b-forks-design.md  2026-04-03-phase10a-policy-audit-design.md  2026-04-03-phase10b-docker-packaging-design.md
docs/user/: cli-reference.md  configuration.md  installation.md  profiles.md  quickstart.md
docs/user-guide/: cli-reference.md  concepts.md  configuration.md  docker.md  heartbeat.md  memory.md  profiles.md  security.md  sessions.md  worktrees-and-forks.md
src/signalagent/: __init__.py
src/signalagent/agents/: __init__.py  base.py  host.py  micro.py  prime.py
src/signalagent/ai/: __init__.py  embedding.py  layer.py
src/signalagent/cli/: __init__.py  app.py  chat_cmd.py  fork_cmd.py  init_cmd.py  memory_cmd.py  sessions_cmd.py  talk_cmd.py  worktree_cmd.py
src/signalagent/comms/: __init__.py  bus.py
src/signalagent/core/: __init__.py  config.py  (+5 more)
tests/: conftest.py
tests/integration/: test_cli.py  test_memory_cli.py
(+109 files in other folders)
