[project]
name = "signalagent"
version = "0.1.0"
description = "AI agent runtime framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3",
    "litellm>=1.40",
    "typer[all]>=0.9",
    "rich>=13.0",
    "aiosqlite>=0.19",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.scripts]
signal = "signalagent.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signalagent"]
artifacts = ["src/signalagent/profiles/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
