[project]
name = "signalagent"
dynamic = ["version"]
description = "AI agent runtime framework -- one interface, many specialists, running continuously."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "forsonny" }]
keywords = ["ai", "agents", "runtime", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0,<3",
    "litellm>=1.40",
    "typer[all]>=0.9",
    "rich>=13.0",
    "aiosqlite>=0.19",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/forsonny/signal"
Documentation = "https://github.com/forsonny/signal/tree/main/docs"
Repository = "https://github.com/forsonny/signal"
Issues = "https://github.com/forsonny/signal/issues"

[project.scripts]
signal = "signalagent.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/signalagent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/signalagent"]
artifacts = ["src/signalagent/profiles/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
